<resources>
    <string name="app_name">Aplicacion_turimos</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia2">Reingrese Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="title_activity_olvidar_cuenta">OlvidarCuenta</string>
    <string name="registrate">Crear Cuenta</string>
    <string name="perfil">Perfil</string>
    <string name="informacion">Informacion</string>
    <string name="configuracion">Configuracion</string>
    <string name="trasporte">Trasporte</string>
    <string name="mapa">Mapa</string>
    <string name="hotelesohostales">Hoteles o Hostales</string>
    <string name="lugaresturisticos">Lugares Turisticos</string>
    <string name="paquetesturisticos">Paquetes Turisticos</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="lugaresparadivertirseencopiapo">Lugares para Divertirse en Copiapó</string>
    <string name="cuidad">Cuidad</string>
    <string name="nombrehotelohostal">Nombre Hotel o Hostal</string>
    <string name="registrar">Crear hotel</string>
    <string name="btnRegistrarh">Registrar hotel</string>
    <string name="btnRegistrarl">Registrar turistico</string>
    <string name="btnRegistrarlu">Registrar lugar</string>
    <string name="btnRegistrarr">Registrar restaurante</string>
    <string name="btnRegistrarp">Registrar paquete</string>
    <string name="registrarr">Crear restaurante</string>
    <string name="registrarlug">Crear lugar</string>
    <string name="registrarp">Crear paquete</string>
    <string name="registrarlu">Crear lugar</string>
    <string name="registrarlugar">Crear lugar turistico</string>
    <string name="registrardivertirse">Crear lugar para divertirse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>