<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/op1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_action_name"
        android:title="@string/perfil"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/op2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/info"
        android:title="@string/informacion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/op3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/configuracion"
        android:title="@string/configuracion"
        app:showAsAction="ifRoom" />
</menu>